<resources>
    <string name="app_name">ModernFoodRecipesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes Fragment</string>
    <string name="favorite_recipes_fragment">Favorite Recipes Fragment</string>
    <string name="food_joke_fragment">Food Joke Fragment</string>
    <string name="add_food">Add food</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="leaf_icon">Leaf Icon</string>
    <string name="sad_icon">Sad Icon</string>
    <string name="no_internet_connection">No Internet Connection</string>

    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="tab_layout">Tab Layout</string>


    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="joke">Joke</string>
    <string name="save_to_favorites">Save To Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
</resources>