<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.recipes.RecipesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_food"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_fastfood"
        android:clickable="true"
        app:tint="@color/white"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"/>

    <ImageView
        android:id="@+id/ivError"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:visibility="invisible"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.37"
        android:contentDescription="@string/sad_icon"
        android:src="@drawable/ic_sad" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:alpha="0.5"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ivError"
        app:layout_constraintStart_toStartOf="@id/ivError"
        app:layout_constraintEnd_toEndOf="@id/ivError"
        android:text="@string/no_internet_connection"/>

</androidx.constraintlayout.widget.ConstraintLayout>