<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipesRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/row_cardView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/recipe_imageView"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/courgette"
                android:maxLines="2"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/recipe_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="TextView"
                android:textColor="@color/darkGray"
                app:layout_constraintEnd_toEndOf="@id/titleTextView"
                app:layout_constraintStart_toStartOf="@id/titleTextView"
                app:layout_constraintTop_toBottomOf="@id/titleTextView" />

            <ImageView
                android:id="@+id/heartImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/heart_icon"
                android:src="@drawable/ic_favorite"
                app:layout_constraintStart_toStartOf="@id/descriptionTextView"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/heartTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="100"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/heartImageView"
                app:layout_constraintStart_toStartOf="@id/heartImageView"
                app:layout_constraintTop_toBottomOf="@id/heartImageView" />

            <ImageView
                android:id="@+id/clockImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:contentDescription="@string/clock_icon"
                android:src="@drawable/ic_clock"
                app:layout_constraintBottom_toBottomOf="@id/heartImageView"
                app:layout_constraintStart_toEndOf="@id/heartImageView"
                app:layout_constraintTop_toTopOf="@id/heartImageView"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/clockTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="100"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="@id/clockImageView"
                app:layout_constraintStart_toStartOf="@id/clockImageView"
                app:layout_constraintTop_toBottomOf="@id/clockImageView" />

            <ImageView
                android:id="@+id/leafImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:contentDescription="@string/leaf_icon"
                android:src="@drawable/ic_veg"
                app:layout_constraintBottom_toBottomOf="@id/heartImageView"
                app:layout_constraintStart_toEndOf="@id/clockImageView"
                app:layout_constraintTop_toTopOf="@id/heartImageView"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/leafTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="100"
                android:textAlignment="center"
                android:textColor="@color/green"
                app:layout_constraintEnd_toEndOf="@id/leafImageView"
                app:layout_constraintStart_toStartOf="@id/leafImageView"
                app:layout_constraintTop_toBottomOf="@id/leafImageView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>